--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,18 @@ header{
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
-
-
-
-
  }
+
+ .list-inline-item:not(:last-child) {
+    margin: 0;
+}
+
+.menucontainer{
+    font-size: 0;
+}
+
+#nav li{
+    font-size: 14px;
+    padding: 0;
+    
+}
