Adding the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,23 @@
 .ui-menu-color-download{
     background-color: #525252;
 }
+
+/*------------------------------special padding, margin, text*/
+h1,h2,h3,h4 {
+    margin: 0;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo" , sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+
 /*-----------------------------------------heading*/
 
 header{
@@ -108,4 +125,13 @@ header{
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
     
+}
+
+/*-----------------------------------------footer*/
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
