--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,155 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*-----------------------------------------colors*/
-.bg-color-name-title{
+/*--------------------------------------------Colors*/
+
+.bg-color-name-title {
     background-color: #676767;
-
 }
 
-.ui-menu-color-home{
-    background-color: #e67e22;
-}
-.ui-menu-color-resume{
-    background-color: #9b59b6;
-}
-.ui-menu-color-contact{
-    background-color: #3498db;
-}
-.ui-menu-color-download{
-    background-color: #525252;
+.bg-color-three-reasons {
+    background-color: #fff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
-/*------------------------------special padding, margin, text*/
-h1,h2,h3,h4 {
+
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #525252;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
-.uppercase{
+.uppercase {
     text-transform: uppercase;
 }
 
 .general-sub {
-    font-family: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
+
 .inline-block {
     display: inline-block;
-
 }
 
+.row-table {
+    display: table;
+}
 
-/*-----------------------------------------heading*/
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
 
-header{
+.history-heading,
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Heading*/
+
+header {
     margin: 0;
 }
-.heading{
+
+.heading {
     margin-left: 50px;
 }
 
-.logo{
+.logo {
     background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 300px;
-    transition: all, 5s ease-in-out;
-    -moz-transition: all, 5s ease-in-out;
-    -webkit-transition: all, 5s ease-in-out;
-
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
 }
 
-.name{
+.name {
     font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
     color: #fff;
+}
 
- }
-
- .title{
-    font-family: "Roboto" , sans-serif;
+.title {
+    font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
- }
+}
 
- .list-inline-item:not(:last-child) {
+.list-inline-item:not(:last-child) {
     margin: 0;
 }
 
-.menucontainer{
+.menucontainer {
     font-size: 0;
 }
 
-#nav{
-    margin: 0;
-}
-#nav li{
+#nav li {
     font-size: 14px;
     padding: 0;
-
 }
 
-.menuitem{
+#nav {
+    margin: 0;
+}
+
+.menuitem {
     height: 120px;
     text-align: center;
     padding: 0;
 }
-.menuitem a{
+
+.menuitem a {
     width: 100%;
     text-decoration: none;
     color: #fff;
     height: 120px;
 }
-.menuitem a i{
+
+.menuitem a i {
     padding-top: 22px;
     display: block;
     color: #fafafa;
     font-size: 26px;
 }
+
 .menuitem span {
     display: block;
     width: 100%;
@@ -126,15 +161,14 @@ header{
     letter-spacing: 2px;
 }
 
-/*-----------------------------------------hover.css*/
+/*--------------------------------------------Hover.css*/
 
-.hvr-sweep-to-bottom::before {
+.hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
-    
 }
 
-/*-----------------------------------------footer*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -142,23 +176,22 @@ footer {
     min-height: 120px;
     margin: 0;
 }
+
 .cv-pdf i {
     font-size: 18px;
     color: #fafafa;
     text-align: center;
     padding-left: 5px;
-    /*--transistion is in the parent for a smooth transistion take place when mouse hoves over and the the mouse leave*/
     transition: all 0.35s ease-in-out;
-    -moz-transistion: all 0.35s ease-in-out; /*-----mozillar blowse*/
-    -webkit-tranistion: all 0.35s ease-in-out;/*-----webkit bloser*/
-    -o-transsition: all 0.35s ease-in-out; /*-----opera blowse*/
-
-
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
+
 .cv-pdf i:hover {
     color: #e84610;
-
 }
+
 .social-links {
     padding-bottom: 15px;
 }
@@ -174,26 +207,130 @@ footer {
     color: #fafafa;
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
-    -moz-transistion: all 0.35s ease-in-out; /*-----mozillar blowse*/
-    -webkit-tranistion: all 0.35s ease-in-out;/*-----webkit bloser*/
-    -o-transsition: all 0.35s ease-in-out; /*-----opera blowse*/
-
-
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
 }
+
 .social-links li a i:hover {
     background: #e84610;
 }
 
 #footer-details {
-    padding: 20px; /*-padding left and right 20px*/ 
+    padding: 20px;
 }
 
-/*-------------------------------------Three Reasons */
+/* ----------------------------------------Three Reasons */
+
 .three-reasons-icon {
     font-size: 26px;
-    color: #eb7e22;
+    color: #e67e22;
 }
 
 .three-reasons-heading {
     margin-bottom: 15px;
+}
+
+/* ----------------------------------------Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
